--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,10 @@ set(CMAKE_TOOLCHAIN_FILE ${VCPKG})
 
 project(trojan)
 
-
 set(CMAKE_CXX_STANDARD 20)
+
+# 设置CMake策略以消除警告
+cmake_policy(SET CMP0167 NEW)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
@@ -16,12 +18,8 @@ file(GLOB_RECURSE CXX_SRC "src/*.cpp")
 add_executable(trojan ${CXX_SRC})
 
 option(UDP "Enable UDP Support" ON)
-option(STATIC_STD "Static Standard Library" ON) 
+option(STATIC_STD "Static Standard Library" ON)
 option(STATIC_BIN "Static link" OFF)
-
-if(UDP)
-    add_definitions(-DTROJAN_USE_UDP)
-endif()
 
 if(STATIC_STD)
     target_link_options(trojan PRIVATE -static-libgcc -static-libstdc++)
@@ -34,15 +32,18 @@ endif()
 find_package(asio CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(range-v3 CONFIG REQUIRED)
-find_package(OpenSSL REQUIRED)
 find_package(Threads REQUIRED)
+# 使用Boost.Asio而不是独立ASIO
+find_package(Boost REQUIRED COMPONENTS system)
 
 target_include_directories(trojan PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_include_directories(trojan PRIVATE ${ASIO_INCLUDE_DIR})
-target_include_directories(trojan PRIVATE ${OPENSSL_INCLUDE_DIR})
+# 移除独立ASIO，使用Boost.Asio
+# target_include_directories(trojan PRIVATE ${ASIO_INCLUDE_DIR})
 
-target_link_libraries(trojan PRIVATE asio::asio)
+# 不再链接独立的asio，使用Boost.Asio
+# target_link_libraries(trojan PRIVATE asio::asio)
 target_link_libraries(trojan PRIVATE fmt::fmt-header-only)
 target_link_libraries(trojan PRIVATE range-v3 range-v3-meta range-v3::meta range-v3-concepts)
-target_link_libraries(trojan PRIVATE ${OPENSSL_LIBRARIES})
 target_link_libraries(trojan PRIVATE Threads::Threads)
+# 链接Boost库（包含Asio和Beast）
+target_link_libraries(trojan PRIVATE Boost::system Boost::boost)
